--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     .container{
        position: absolute;
-       right: 400px;
+       left: 525px;
        top:40px;
        animation: bounceOut 1.5s ease-in-out 0.5s
     }
